--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "eslint": "^9.11.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "qs": "^6.13.0",
     "uuid": "^10.0.0"
