--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/credential-provider-ini": "^3.797.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.17",
     "react": "^19.0.0",
