--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,8 +13,11 @@
     "@aws-sdk/credential-provider-ini": "^3.797.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.17",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.17"
