--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-sdk/credential-provider-ini": "^3.797.0",
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.17",
     "i18next": "^25.0.2",
